data/all_generated_tests/raw_wast_tests/unreachable_MismanagementofBlockNesting_1205.wast
;; 6. **Test Description:**    A function that involves an immediate `unreachable` followed by a heavily nested control flow including both valid and invalid `br` instructions.    - **Constraint Checked:** Ensures that all nested control flow instructions post `unreachable` are invalidated and do not incorrectly alter control structures.    - **Relation to Mismanagement of Block Nesting:** Verifies that the trap prevents the mismanagement of nested block control flow by prepared nested `br` instructions.

(assert_invalid
  (module
    (func $nested_unreachable (result i32)
      (block
        (block
          (unreachable)
          (block
            (block
              (br 1))
            (i32.const 1)))
        (br 0))
      (i32.const 0)
    )
  )
  "type mismatch"
)